--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,8 @@ SUPER_ADMIN_PASSWORD= put your password here
 
 # BY DEFAULT USERNAME IS "SUPER ADMIN" - TO OVERRIDE IT ADD USERNAME HERE
 SUPER_ADMIN_USERNAME= put your password here
+
+
+
+APP_USER=
+APP_PASSWORD=
