--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "pg": "^8.11.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "chalk": "^4.1.2",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3",
     "passport": "^0.7.0",
-    "passport-jwt": "^4.0.1"
+    "passport-jwt": "^4.0.1",
+    "pg": "^8.11.3"
   }
 }
