--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,6 @@
-# MANDATORY
-
-PORT=5000
-MONGO_URL= put your mongo url here
+PORT=3000
+PG_URL= put your mongo url here
 JWT_SECRET= put your jwt secret here
-
-# used to generate token
 SECRET_PRIVATE_KEY= your jwt secret private key here
-
-SUPER_ADMIN_EMAIL= put your email here
-SUPER_ADMIN_PASSWORD= put your password here
-
-# OPTIONAL
-
-# BY DEFAULT USERNAME IS "SUPER ADMIN" - TO OVERRIDE IT ADD USERNAME HERE
-SUPER_ADMIN_USERNAME= put your password here
-
-
-
 APP_USER=
 APP_PASSWORD=
