--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ JWT_SECRET= put your jwt secret here
 SECRET_PRIVATE_KEY= your jwt secret private key here
 APP_USER=
 APP_PASSWORD=
+AWS_SES_ACCESS_KEY=
+AWS_SES_SECRET_KEY=
