modified:   .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 PORT=3000
-PG_URL= put your mongo url here
-JWT_SECRET= put your jwt secret here
-SECRET_PRIVATE_KEY= your jwt secret private key here
-APP_USER=
-APP_PASSWORD=
-AWS_SES_ACCESS_KEY=
-AWS_SES_SECRET_KEY=
+JWT_SECRET="eduexamsystem"
+SECRET_PRIVATE_KEY="eduexamsystem"
+PG_URL=""
+APP_USER=""
+APP_PASSWORD="frzw nlsp kbkn rmii"
+AWS_SES_ACCESS_KEY="AKIAYS2NQMIXLT7RAQ7F"
+AWS_SES_SECRET_KEY="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"
+ADMIN_EMAIL=""
+ADMIN_PASSWORD="eduexam"
