Partially Working on MS Edge

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3000
 JWT_SECRET="eduexamsystem"
 SECRET_PRIVATE_KEY="eduexamsystem"
-PG_URL=""
+PG_URL="postgresql://kotadb_owner:6dAzTngph1PB@ep-dawn-sea-a5l9c4yn.us-east-2.aws.neon.tech/kotadb?sslmode=require"
 APP_USER=""
 APP_PASSWORD="frzw nlsp kbkn rmii"
 AWS_SES_ACCESS_KEY="AKIAYS2NQMIXLT7RAQ7F"
