--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@ PORT=3000
 JWT_SECRET="eduexamsystem"
 SECRET_PRIVATE_KEY="eduexamsystem"
 PG_URL="postgresql://kotadb_owner:6dAzTngph1PB@ep-dawn-sea-a5l9c4yn.us-east-2.aws.neon.tech/kotadb?sslmode=require"
-APP_USER=""
+APP_USER="eduvoiceexam@gmail.com"
 APP_PASSWORD="frzw nlsp kbkn rmii"
 AWS_SES_ACCESS_KEY="AKIAYS2NQMIXLT7RAQ7F"
 AWS_SES_SECRET_KEY="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"
-ADMIN_EMAIL=""
+ADMIN_EMAIL="eduvoiceexam@gmail.com"
 ADMIN_PASSWORD="eduexam"
