--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ AWS_SES_ACCESS_KEY="AKIAYS2NQMIXLT7RAQ7F"
 AWS_SES_SECRET_KEY="s9EWcVLpS1vt2nEJ87H+1ToBdTrfJlJahcANxNh7"
 ADMIN_EMAIL="eduvoiceexam@gmail.com"
 ADMIN_PASSWORD="eduexam"
+OPENAI_API_KEY="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"
