--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 PORT=3000
 JWT_SECRET="eduexamsystem"
 SECRET_PRIVATE_KEY="eduexamsystem"
-PG_URL="postgresql://kotadb_owner:6dAzTngph1PB@ep-dawn-sea-a5l9c4yn.us-east-2.aws.neon.tech/kotadb?sslmode=require"
+PG_URL=""
 APP_USER="eduvoiceexam@gmail.com"
-APP_PASSWORD="frzw nlsp kbkn rmii"
-AWS_SES_ACCESS_KEY="AKIAYS2NQMIXLT7RAQ7F"
-AWS_SES_SECRET_KEY="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"
+APP_PASSWORD=""
+AWS_SES_ACCESS_KEY=""
+AWS_SES_SECRET_KEY=""
 ADMIN_EMAIL="eduvoiceexam@gmail.com"
 ADMIN_PASSWORD="eduexam"
-OPENAI_API_KEY="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"
+OPENAI_API_KEY=""
