--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "exceljs": "^4.3.0"
   }
 }
